Test/module/inconsistent_fixity.expected.txt
ppap> Copyright (c) 2021-2026, Kijeong Lim
ppap> All rights reserved
ppap =<< ppap >>= exec (Hol.main --test)
Hol =<< Hol> Compiling Test.module.inconsistent_fixity ( Test/module/inconsistent_fixity.hol, interpreted )
5:1: error: [HolBETA2-ModuleError]
   |                                 
 5 | import Test.module.inc_fixity_b.
   | ^                               
Import inconsistency (C5): `my_op' is declared by both `Test.module.inc_fixity_a' and `Test.module.inc_fixity_b' with disagreeing fixity. (`Test.module.inc_fixity_a': FK_InfixL 5; `Test.module.inc_fixity_b': FK_InfixR 6.)

Hol =<< Hol >>= quit
